--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,6 +18,8 @@ nav ul#menu-desktop {
     margin:0;
     padding:0;
     text-align: right;
+    position: fixed;
+    top: 0;
 }
 
 nav ul#menu-desktop li {
@@ -28,7 +30,6 @@ nav ul#menu-desktop li {
 nav ul#menu-desktop li a {
     padding: 30px 40px;
     text-decoration: none;
-
     color:#FFF;
     display: inline-block;
     margin-right: -3px;
