--- a/css/estilo.css
+++ b/css/estilo.css
@@ -53,6 +53,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
+    padding-top: 10px;
 }
 
 header h1 {
